# mp4analyzer

./: .gitignore  README.md  analyze.py  benchmark_comparison.py  build.py  canvas.py  frames.py  gop.py  loader.py  main.py  main_window.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  timeline.py  timeline_widget.py  ui.py  ui_components.py  video_canvas.py  video_loader.py
.github/workflows/: build.yaml  ci.yml  publish-pypi.yml  release.yml
loadmp4/: load.py
parsemp4/: __init__.py  analyze.py  gop.py  movieinfo.py  mp4box.py  parser.py  utils.py
parsemp4/boxes/: __init__.py  base.py  elst.py  ftyp.py  iods.py  mvhd.py  tkhd.py  trak.py
src/mp4analyzer/: __init__.py  cli.py  movieinfo.py  parser.py
src/mp4analyzer/boxes/: __init__.py  avc1.py  hev1.py  meta.py  mp4a.py  tfhd.py  traf.py
tests/: test_boxes.py  test_frame_collection.py  test_models_extra.py  test_parsemp4.py  test_performance.py  test_video_loader.py  test_widgets.py
ui/: main_window.py  timeline_widget.py  ui_components.py  video_canvas.py
