[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mp4analyzer"
description = "Lightweight MP4 box analyzer"
readme = "README.md"
license = { text = "MIT License" }
dynamic = ["version"] 
authors = [
    {name = "Andrew Xin", email = "andrewx@bu.edu"}
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mp4analyzer = "mp4analyzer.cli:main"

[project.optional-dependencies]
gui = ["PyQt6>=6.9", "pillow>=11.3"]
dev = ["ruff>=0.12", "black>=25.1", "pytest>=8.4", "pyinstaller>=6.15", "PyQt6>=6.9", "pillow>=11.3"]
